--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -1,9 +1,3 @@
 .page-header {
-	color: #ebeef5;
-	font-size: 64px;
-	font-weight: 600;
-	line-height: 80px;
-	letter-spacing: -1.28px;
-
-	margin-bottom: 25px;
+	max-width: 588px;
 }
